--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
+    "spotify-web-api-js": "^1.5.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.0",
     "zustand": "^5.0.8"
