--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.56.0",
+    "@tailwindcss/node": "^4.1.12",
+    "@tailwindcss/postcss": "^4.1.12",
     "autoprefixer": "^10.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -32,7 +34,7 @@
     "remark-math": "^6.0.0",
     "spotify-web-api-js": "^1.5.2",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^4.1.12",
     "zod": "^4.1.0",
     "zustand": "^5.0.8"
   },
